--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@ Click==7.0
 decorator==4.3.0
 Flask==1.0.2
 Flask-Jsonpify==1.5.0
+Flask-Session==0.3.1
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
 ipython==7.0.1
 ipython-genutils==0.2.0
-ItsDangerous==1.1.0
+ItsDangerous==1.0.0
 jedi==0.13.1
 Jinja2==2.10
 MarkupSafe==1.0
