--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.0
 backcall==0.1.0
 Click==7.0
+coverage==4.5.1
 decorator==4.3.0
 Flask==1.0.2
 Flask-Jsonpify==1.5.0
@@ -9,7 +10,7 @@ Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
 ipython==7.0.1
 ipython-genutils==0.2.0
-ItsDangerous==1.1.0
+ItsDangerous==1.0.0
 jedi==0.13.1
 Jinja2==2.10
 MarkupSafe==1.0
